--- a/foodie_app/templates/home.html
+++ b/foodie_app/templates/home.html
@@ -27,7 +27,11 @@
         <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
-    <h1 class="heading m-3 mt-5 pt-5">Recipes</h1>
+    <div class="d-flex justify-content-between w-75 ml-auto mr-auto">
+      <div></div>
+      <h1 class="heading m-3 mt-5 pt-5">Recipes</h1>
+      <button type="button" class="btn mb-4 p-1 pl-2 pr-2 rounded shadow-sm align-self-end button" data-toggle="modal" data-target="#exampleModalLong"><i class="fas fa-search mr-1"></i>Find User</button>
+    </div>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="d-flex flex-wrap w-75 ml-auto mr-auto">
         {% for recipe in recipes %}
@@ -37,6 +41,29 @@
         </div>
         {% endfor %}
     </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Users</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          {% for u in users %}
+            <p><a href="/home/{{u.id}}">{{ u.first_name }} {{ u.last_name }}</a> ({{ u.email }})</p>
+            <br>
+          {% endfor %}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
         integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
