--- a/foodie_app/templates/home.html
+++ b/foodie_app/templates/home.html
@@ -35,9 +35,19 @@
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="d-flex flex-wrap w-75 ml-auto mr-auto">
         {% for recipe in recipes %}
-        <div class="recipe-card rounded shadow-sm w-25 p-3 mb-1">
+        <div class="recipe-card rounded shadow-sm w-25 p-3 mb-1 d-flex flex-column">
             <h3 class="text-center"><a id="recipe-text" href="/home/recipe_{{recipe.id}}">{{recipe.name}}</a></h3>
-            <p>{{recipe.desc}}</p>
+            <p class="mb-auto">{{recipe.desc}}</p>
+            <div class="d-flex mt-2 justify-content-between">
+              <p>Added by: <a href="home/{{recipe.creator.id}}" class="text-dark">{{recipe.creator.first_name}} {{recipe.creator.last_name}}</a></p>
+              {% if user in recipe.users_who_favorite.all %}
+                  <a href="/home/{{recipe.id}}/remove_favorite_home" class="btn p-1"><i class="fas fa-heart"></i></a>
+                  {% endif %}
+                  {% if not user in recipe.users_who_favorite.all %}
+                  <a href="/home/{{recipe.id}}/add_favorite_home" class="btn p-1"><i class="far fa-heart"></i></a>
+                  {% endif %}
+            </div>
+            
         </div>
         {% endfor %}
     </div>
